--- a/about1.html
+++ b/about1.html
@@ -34,12 +34,12 @@
 <div class="preloader clock text-center">
 <div class="queraLoader">
 <div class="loaderO">
-<span>Q</span>
+<!-- <span>Q</span>
 <span>U</span>
 <span>I</span>
 <span>V</span>
 <span>E</span>
-<span>R</span>
+<span>R</span> -->
 </div>
 </div>
 </div>
@@ -49,16 +49,16 @@
     <div class="container largeContainer">
     <div class="row">
     <div class="col-md-9">
-    <p><i class="bpro-mail-2"></i><a href="https://themewar.com/cdn-cgi/l/email-protection#73000603031c010733161e121a1f5d101c1e">Mail: <span class="__cf_email__" data-cfemail="e99a9c9999869b9da98c84888085c78a8684">O.alao@quivertrustltd.come.ng</span></a></p>
+    <p><i class="bpro-mail-2"></i><a href="https://themewar.com/cdn-cgi/l/email-protection#73000603031c010733161e121a1f5d101c1e">Mail: <span class="__cf_email__" data-cfemail="e99a9c9999869b9da98c84888085c78a8684">info@quivertrustltd.com.ng</span></a></p>
     <p><i class="bpro-phone-ringing"></i><a href="tel:+1245698909">Phone: +2348060875751</a></p>
     </div>
-    <div class="col-md-3">
+    <!-- <div class="col-md-3">
     <div class="topsocial">
     <a href="javascript:void(0);"><i class="twi-facebook-square"></i></a>
     <a href="javascript:void(0);"><i class="twi-pinterest"></i></a>
     <a href="javascript:void(0);"><i class="twi-twitter-square"></i></a>
     </div>
-    </div>
+    </div> -->
     </div>
     </div>
     </section>
@@ -217,12 +217,12 @@
         
         </ul>  -->
         </li> 
-        <li class="">
+        <!-- <li class="">
         <a href="blog1.html">BLOG</a>
-        <!-- <ul class="sub-menu">
-        <li class=""> -->
+        <ul class="sub-menu">
+        <li class=""> 
         
-        </li>
+        </li> -->
         <!-- <li class="menu-item-has-children">
         <a href="javascript:void(0);">Team View Style</a>
         <ul class="sub-menu">
@@ -289,7 +289,7 @@
 </section>
 
 
-<section class="page_banner" style="background-image: url(assets/images/bg/banner.jpg);">
+<section class="page_banner" style="background-image: url(assets/images/me/unlock6.webp);">
 <div class="overlay"></div>
 <div class="container largeContainer">
 <div class="row">
@@ -307,7 +307,7 @@
 <div class="row">
 <div class="col-lg-5">
 <div class="subTitle">Who We Are</div>
-<h2 class="secTitle"> A Microfinance Company
+<h2 class="secTitle"> A Microfinance Solutions
 </h2>
 <p>
     Welcome to Quiver trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions. Our mission is to provide accessible, reliable, and tailored financial services to individuals, families, and businesses, enabling them to achieve their goals and create a better future.
@@ -323,9 +323,9 @@
 </div>
 <div class="col-lg-7">
 <div class="abpageThumb">
-<img src="assets/images/about/1.jpg" alt>
+<img src="assets/images/me/unlockman.webp" alt>
 <div class="abInner">
-<img src="assets/images/about/2.jpg" alt>
+<img src="assets/images/me/bbbcon.jpg" alt>
 </div>
 </div>
 </div>
@@ -368,7 +368,7 @@
 <div class="ibMeta">
 <img src="assets/images/service/6.png" alt>
 </div>
-<h3><a href="single-service.html">Business Consulting</a></h3>
+<h3><a href="single-service.html">Expert in  business business partner</a></h3>
 <p>At Quiver trust, we understand that navigating the complexities of today’s business environment requires expert guidance and innovative solutions. Our business consulting services are designed to help organizations of all sizes overcome challenges, optimize operations, and achieve sustainable growth.</p>
 
 </div>
@@ -533,7 +533,6 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 </div>
 </footer> -->
 
-
 <footer class="footer_01">
     <div class="container largeContainer">
     <div class="row">
@@ -543,32 +542,32 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <p>At Quiver Trust, we are dedicated to empowering individuals, families, and businesses to achieve their financial goals with ease and confidence. We understand that managing finances can be a complex and sometimes overwhelming task, but with our expertise and personalized services, we aim to make financial success accessible to everyone.
     </p>
     <div class="abIcon"><i class="twi-map-marker"></i>9b ibironke crescent, Off Okunola Aina street, OASIC Estate, Maryland, Lagos.</div>
-    <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735">o.alao@quivertrustltd.com.ng</a></div>
+    <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
     <div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
     </div>
     </div>
-    <div class="col-md-6 col-xl-3 ml54">
+    <div class="col-md-6 col-xl-4 ml54">
     <div class="widget">
     <div class="wsubtitle">Clean & Flexible</div>
     <h3 class="widget_title">Latest Post</h3>
     <div class="pp_post_item">
-    <img src="assets/images/blog/b1.jpg" alt>
+    <img src="assets/images/me/specialdiscount.png" alt>
     <span>July 29, 2025</span>
     <a href="single-blog.html">Get 5% Discount</a>
     </div>
     <div class="pp_post_item">
-    <img src="assets/images/blog/b2.jpg" alt>
+    <img src="assets/images/me/onemonth.webp" alt>
     <span>April 29, 2025</span>
     <a href="single-blog.html">minimum of One month investment</a>
     </div>
     <div class="pp_post_item">
-    <img src="assets/images/blog/b3.jpg" alt>
+    <img src="assets/images/me/bconsult.webp" alt>
     <span>March 29, 2025</span>
     <a href="single-blog.html">Business Consulting</a>
     </div>
     </div>
     </div>
-    <div class="col-md-6 col-xl-2">
+    <div class="col-md-6 col-xl-4">
     <div class="widget">
     <div class="wsubtitle">Clean & Flexible</div>
     <h3 class="widget_title">Quick Links</h3>
@@ -577,11 +576,11 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <li><a href="javascript:void(0);">ABOUT</a></li>
     <li><a href="javascript:void(0);">SERVICES</a></li>
     <li><a href="javascript:void(0);">FAQs</a></li>
-    <li><a href="javascript:void(0);">BLOG</a></li>
+    <!-- <li><a href="javascript:void(0);">BLOG</a></li> -->
     </ul>
     </div>
     </div>
-    <div class="col-md-6 col-xl-3">
+    <!-- <div class="col-md-6 col-xl-4">
     <div class="widget gallery">
     <div class="wsubtitle">Clean & Flexible</div>
     <h3 class="widget_title">Images of happy client</h3>
@@ -597,8 +596,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/9.jpg" alt="Instagram"></a>
     </div>
     </div>
-    </div>
-    </div>
+    </div> -->
+    </div> 
     <div class="row">
     <div class="col-lg-12">
     <div class="ctaMail">
@@ -621,7 +620,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     </div>
     <div class="row">
     <div class="col-lg-12 text-center">
-    <!-- <div class="Copyright"><span>Bepro</span> - Copyright 2021. Developed by <a href="https://themewar.com/">Themewar</a></div> -->
+    <div class="Copyright"><span>quivertrustltd</span> - Copyright 2021. Developed by <a href="#">Ogungbuyi victor</a></div>
     </div>
     </div>
     </div>
