--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from themewar.com/html/bepro/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Oct 2024 13:01:32 GMT -->
 <head>
-<title>Quiver Trust limited - A Microfinance company</title>
+<title>Quiver Trust limited - A Microfinance Solutions</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 
@@ -34,12 +34,12 @@
 <div class="preloader clock text-center">
 <div class="queraLoader">
 <div class="loaderO">
-<span>Q</span>
+<!-- <span>Q</span>
 <span>U</span>
 <span>I</span>
 <span>V</span>
 <span>E</span>
-<span>R</span>
+<span>R</span> -->
 </div>
 </div>
 </div>
@@ -49,15 +49,15 @@
 <div class="container largeContainer">
 <div class="row">
 <div class="col-md-9">
-<p><i class="bpro-mail-2"></i><a href="https://themewar.com/cdn-cgi/l/email-protection#73000603031c010733161e121a1f5d101c1e">Mail: <span class="__cf_email__" data-cfemail="e99a9c9999869b9da98c84888085c78a8684">O.alao@quivertrustltd.come.ng</span></a></p>
+<p><i class="bpro-mail-2"></i><a href="https://themewar.com/cdn-cgi/l/email-protection#73000603031c010733161e121a1f5d101c1e">Mail: <span class="__cf_email__" data-cfemail="e99a9c9999869b9da98c84888085c78a8684">info@quivertrustltd.com.ng</span></a></p>
 <p><i class="bpro-phone-ringing"></i><a href="tel:+1245698909">Phone: +2348060875751</a></p>
 </div>
-<div class="col-md-3">
+<!-- <div class="col-md-3">
 <div class="topsocial">
 <a href="javascript:void(0);"><i class="twi-facebook-square"></i></a>
 <a href="javascript:void(0);"><i class="twi-pinterest"></i></a>
 <a href="javascript:void(0);"><i class="twi-twitter-square"></i></a>
-</div>
+</div> -->
 </div>
 </div>
 </div>
@@ -217,12 +217,12 @@
 
 </ul>  -->
 </li> 
-<li class="">
+<!-- <li class="">
 <a href="blog1.html">BLOG</a>
-<!-- <ul class="sub-menu">
-<li class=""> -->
+<ul class="sub-menu">
+<li class=""> 
 
-</li>
+</li> -->
 <!-- <li class="menu-item-has-children">
 <a href="javascript:void(0);">Team View Style</a>
 <ul class="sub-menu">
@@ -295,7 +295,7 @@
 <ul>
 <li data-index="rs-3049" data-transition="random-premium" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1000" data-thumb data-rotate="0" data-saveperformance="off" data-title data-param1 data-param2 data-param3 data-param4 data-param5 data-param6 data-param7 data-param8 data-param9 data-param10 data-description>
 <img src="assets/images/me/free.jpg" alt="berpo" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="0" class="rev-slidebg" data-no-retina>
-<div class="tp-caption ws_nowrap text-uppercase" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0']" data-y="['middle']" data-voffset="['-70','-70','-70','-100']" data-fontsize="['14','14','14','14']" data-fontweight="700" data-lineheight="['28']" data-letterspacing="2.8" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#bb0b0b']" data-type="text" data-responsive_offset="on" data-frames="[{&quot;delay&quot;:1500,&quot;speed&quot;:400,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;x:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;x:50px;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="bg">A Microfinance company</span>
+<div class="tp-caption ws_nowrap text-uppercase" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0']" data-y="['middle']" data-voffset="['-70','-70','-70','-100']" data-fontsize="['14','14','14','14']" data-fontweight="700" data-lineheight="['28']" data-letterspacing="2.8" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#bb0b0b']" data-type="text" data-responsive_offset="on" data-frames="[{&quot;delay&quot;:1500,&quot;speed&quot;:400,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;x:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;x:50px;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="bg">A Microfinance Solutions</span>
 </div>
 <div class="tp-caption headFont ws_nowrap" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0', '0', '0', '0']" data-y="['middle']" data-voffset="['34','44','40','10']" data-fontsize="['70','60','55','40']" data-fontweight="700" data-lineheight="['80','70','65','50']" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#ffffff']" data-type="text" data-responsive_offset="off" data-frames="[{&quot;delay&quot;:2000,&quot;speed&quot;:500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;x:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;x:50px;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]">Welcome to<span class="prcolor"> Quiver Trust Limited </span>
 </div>
@@ -308,7 +308,7 @@
 </li>
 <li data-index="rs-3050" data-transition="random-premium" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1000" data-thumb data-rotate="0" data-saveperformance="off" data-title data-param1 data-param2 data-param3 data-param4 data-param5 data-param6 data-param7 data-param8 data-param9 data-param10 data-description>
 <img src="assets/images/me/phoneloan.jpg" alt="berpo" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="0" class="rev-slidebg" data-no-retina>
-<div class="tp-caption ws_nowrap text-uppercase" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0']" data-y="['middle']" data-voffset="['-70','-70','-70','-100']" data-fontsize="['14','14','14','14']" data-fontweight="700" data-lineheight="['28']" data-letterspacing="2.8" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#bb0b0b']" data-type="text" data-responsive_offset="on" data-frames="[{&quot;delay&quot;:1500,&quot;speed&quot;:400,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="bg">A Microfinance Company</span>
+<div class="tp-caption ws_nowrap text-uppercase" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0']" data-y="['middle']" data-voffset="['-70','-70','-70','-100']" data-fontsize="['14','14','14','14']" data-fontweight="700" data-lineheight="['28']" data-letterspacing="2.8" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#bb0b0b']" data-type="text" data-responsive_offset="on" data-frames="[{&quot;delay&quot;:1500,&quot;speed&quot;:400,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="bg">A Microfinance Solutions</span>
 </div>
 <div class="tp-caption headFont ws_nowrap" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0', '0', '0', '0']" data-y="['middle']" data-voffset="['34','44','40','10']" data-fontsize="['70','60','55','40']" data-fontweight="700" data-lineheight="['80','70','65','50']" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#ffffff']" data-type="text" data-responsive_offset="off" data-frames="[{&quot;delay&quot;:1800,&quot;speed&quot;:500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]">Empower Your Dreams <span class="prcolor">  with Easy Financing</span>
 </div>
@@ -448,9 +448,9 @@
 <h3>Affordable loans tailored just for you.</h3>
 <div class="happyClinets">
 <div class="cThumb">
-<img src="assets/images/home1/c1.png" alt>
-<img src="assets/images/home1/c2.png" alt>
-<img src="assets/images/home1/c3.png" alt>
+<img src="assets/images/me/womanhead.webp" alt>
+<img src="assets/images/me/head1.webp" alt>
+<img src="assets/images/me/womanhead2.webp" alt>
 </div>
 <div class="hcCon">
 <h5>Happy Clients & Rating</h5>
@@ -631,15 +631,21 @@
 <div class="container largeContainer">
 <div class="row">
 <div class="col-xl-5">
-<div class="subTitle">Just a Consultancy</div>
+<div class="subTitle">Your Business Solutions are here at Quiver Trust</div>
 <h2 class="secTitle">We are Certified Financial Experts</h2>
 <p>
 We craft unique digital experiences. With more than 7<br> years of expertise.
 </p>
 <ul class="listItem withbg">
-<li><span><i class="twi-check-circle"></i>Innovative Approach Consultancy</span></li>
-<li><span><i class="twi-check-circle"></i>Flexibile Involvement Consultancy</span></li>
-<li><span><i class="twi-check-circle"></i>Personal Manager Consultancy</span></li>
+<li><span><i class="twi-check-circle"></i>We’re All About Your Goals—Set Them, Reach Them! </span></li>
+<li><span><i class="twi-check-circle"></i>Partner with us to reach your business and personal financial targets with speed and ease.</span></li>
+<li><span><i class="twi-check-circle"></i>Flexibility at Its Best—Your Rules, Your Terms! Customize your loan terms and conditions to fit your needs!</span></li>
+<li><span><i class="twi-check-circle"></i>Success, Made Simple. 
+  No stress, no hassle—just results. Let’s make your financial journey effortless.</span></li>
+<li><span><i class="twi-check-circle"></i>“Watering and nurturing your wealth” “Just watch it grow”</span></li>
+<li><span><i class="twi-check-circle"></i>Open, transparent and here to help: Great customer service. Ask all you need to.</span></li>
+<li><span><i class="twi-check-circle"></i>Testimonials</span></li>
+<li><span><i class="twi-check-circle"></i>8.Safety for your small business till it grows into the giant it’s meant to be</span></li>
 </ul>
 <a class="berpo_btn" href="contact.html">
 <span class="bp-shape"></span>
@@ -651,10 +657,10 @@ We craft unique digital experiences. With more than 7<br> years of expertise.
 </div>
 <div class="col-xl-7">
 <div class="clinetWorlwide">
-<img src="assets/images/home1/1.png" alt>
-<div class="ClientNumber countfact" data-count="10">
-<h2><span class="counter">10</span><sup>+</sup></h2>
-<h5>Partners in Nigeria</h5>
+<img src="assets/images/nicediscount.jpg" alt>
+<div class="ClientNumber countfact" data-count="10000000">
+<h3><span class="counter" style="font-size: 50px;">10000000</span><sup>+</sup></h3>
+<h3>Available cash for Loan</h3>
 </div>
 </div>
 </div>
@@ -668,13 +674,13 @@ We craft unique digital experiences. With more than 7<br> years of expertise.
 <div class="container largeContainer">
 <div class="row">
 <div class="col-lg-12 text-center">
-<h2 class="secTitle">Flexible Pricing Packages</h2>
+<h2 class="secTitle">Get a Loan</h2>
 <div class="pricingTab">
 <a href="javascript:void(0);" data-toggleclass="monthly_1" class="priceToggle active">Monthly</a>
 <a href="javascript:void(0);" data-toggleclass="yearly_1" class="priceToggle">Annual</a>
 </div>
 <div class="row">
-<div class="col-lg-4 col-md-6">
+<!-- <div class="col-lg-4 col-md-6">
 <div class="pricing-item-01 text-left">
 <div class="price-thumb">
 <img src="assets/images/home1/p1.jpg" alt>
@@ -695,7 +701,7 @@ We craft unique digital experiences. With more than 7<br> years of expertise.
 <li><i class="twi-check-circle"></i>IT Consulting</li>
 <!-- <li><i class="twi-check-circle"></i>Free Fixes & Updates</li> -->
 <!-- <li><i class="twi-check-circle"></i>Digital Solutions</li> -->
-</ul>
+<!--</ul>
 <a class="berpo_btn" href="contact.html">
 <span class="bp-shape"></span>
 <span class="bp-shape"></span>
@@ -705,8 +711,8 @@ We craft unique digital experiences. With more than 7<br> years of expertise.
 </a>
 </div>
 </div>
-</div>
-<div class="col-lg-4 col-md-6">
+</div> -->
+<div class="col-lg-4 col-md-6 ml-auto mr-auto">
 <div class="pricing-item-01 text-left">
 <div class="price-thumb">
 <img src="assets/images/home1/p2.jpg" alt>
@@ -738,7 +744,7 @@ We craft unique digital experiences. With more than 7<br> years of expertise.
 </div>
 </div>
 </div>
-<div class="col-lg-4 col-md-6">
+<!-- <div class="col-lg-4 col-md-6">
 <div class="pricing-item-01 text-left">
 <div class="price-thumb">
 <img src="assets/images/home1/p3.jpg" alt>
@@ -756,10 +762,10 @@ We craft unique digital experiences. With more than 7<br> years of expertise.
 <ul>
 <li><i class="twi-check-circle"></i>Support at $25/hour</li>
 <li><i class="twi-check-circle"></i>Product Engineering</li>
-<li><i class="twi-check-circle"></i>IT Consulting</li>
+<li><i class="twi-check-circle"></i>IT Consulting</li> -->
 <!-- <li><i class="twi-check-circle"></i>Free Fixes & Updates</li> -->
 <!-- <li><i class="twi-check-circle"></i>Digital Solutions</li> -->
-</ul>
+<!-- </ul>
 <a class="berpo_btn" href="contact.html">
 <span class="bp-shape"></span>
 <span class="bp-shape"></span>
@@ -768,7 +774,7 @@ We craft unique digital experiences. With more than 7<br> years of expertise.
 <span class="bp-text">CONTACT NOW</span>
 </a>
 </div>
-</div>
+</div> -->
 </div>
 </div>
 </div>
@@ -1015,7 +1021,7 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 We craft unique digital experiences. With more than 7 years of expertise we design and code clean websites, We are committed to providing our customers with exceptional service.
 </p>
 <div class="ts_author">
-<img src="assets/images/home1/t1.png" alt>
+<img src="assets/images/me/head1.webp" alt>
 <h5>Matt Sanchzi</h5>
 <span>ThemeForest Exclusive</span>
 </div>
@@ -1026,7 +1032,7 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 We craft unique digital experiences. With more than 7 years of expertise we design and code clean websites, We are committed to providing our customers with exceptional service.
 </p>
 <div class="ts_author">
-<img src="assets/images/home1/t2.png" alt>
+<img src="assets/images/me/womanhead.webp" alt>
 <h5>Mark Smith</h5>
 <span>Envato Author</span>
 </div>
@@ -1134,32 +1140,32 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 <p>At Quiver Trust, we are dedicated to empowering individuals, families, and businesses to achieve their financial goals with ease and confidence. We understand that managing finances can be a complex and sometimes overwhelming task, but with our expertise and personalized services, we aim to make financial success accessible to everyone.
 </p>
 <div class="abIcon"><i class="twi-map-marker"></i>9b ibironke crescent, Off Okunola Aina street, OASIC Estate, Maryland, Lagos.</div>
-<div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735">o.alao@quivertrustltd.com.ng</a></div>
+<div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
 <div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
 </div>
 </div>
-<div class="col-md-6 col-xl-3 ml54">
+<div class="col-md-6 col-xl-4 ml54">
 <div class="widget">
 <div class="wsubtitle">Clean & Flexible</div>
 <h3 class="widget_title">Latest Post</h3>
 <div class="pp_post_item">
-<img src="assets/images/blog/b1.jpg" alt>
+<img src="assets/images/me/specialdiscount.png" alt>
 <span>July 29, 2025</span>
 <a href="single-blog.html">Get 5% Discount</a>
 </div>
 <div class="pp_post_item">
-<img src="assets/images/blog/b2.jpg" alt>
+<img src="assets/images/me/onemonth.webp" alt>
 <span>April 29, 2025</span>
 <a href="single-blog.html">minimum of One month investment</a>
 </div>
 <div class="pp_post_item">
-<img src="assets/images/blog/b3.jpg" alt>
+<img src="assets/images/me/bconsult.webp" alt>
 <span>March 29, 2025</span>
 <a href="single-blog.html">Business Consulting</a>
 </div>
 </div>
 </div>
-<div class="col-md-6 col-xl-2">
+<div class="col-md-6 col-xl-4">
 <div class="widget">
 <div class="wsubtitle">Clean & Flexible</div>
 <h3 class="widget_title">Quick Links</h3>
@@ -1168,11 +1174,11 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 <li><a href="javascript:void(0);">ABOUT</a></li>
 <li><a href="javascript:void(0);">SERVICES</a></li>
 <li><a href="javascript:void(0);">FAQs</a></li>
-<li><a href="javascript:void(0);">BLOG</a></li>
+<!-- <li><a href="javascript:void(0);">BLOG</a></li> -->
 </ul>
 </div>
 </div>
-<div class="col-md-6 col-xl-3">
+<!-- <div class="col-md-6 col-xl-4">
 <div class="widget gallery">
 <div class="wsubtitle">Clean & Flexible</div>
 <h3 class="widget_title">Images of happy client</h3>
@@ -1188,8 +1194,8 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/9.jpg" alt="Instagram"></a>
 </div>
 </div>
-</div>
-</div>
+</div> -->
+</div> 
 <div class="row">
 <div class="col-lg-12">
 <div class="ctaMail">
