--- a/service1.html
+++ b/service1.html
@@ -34,12 +34,12 @@
 <div class="preloader clock text-center">
 <div class="queraLoader">
 <div class="loaderO">
-<span>Q</span>
+<!-- <span>Q</span>
 <span>U</span>
 <span>I</span>
 <span>V</span>
 <span>E</span>
-<span>R</span>
+<span>R</span> -->
 </div>
 </div>
 </div>
@@ -53,7 +53,7 @@
 </span></a></p>
 <p><i class="bpro-phone-ringing"></i><a href="tel:+1245698909">Office: +2347025251599</a></p>
 </div>
-<div class="col-md-3">
+<!-- <div class="col-md-3">
 <div class="topsocial">
 <a href="javascript:void(0);"><i class="twi-facebook-square"></i></a>
 <a href="javascript:void(0);"><i class="twi-pinterest"></i></a>
@@ -61,7 +61,7 @@
 </div>
 </div>
 </div>
-</div>
+</div> -->
 </section>
 
 
@@ -218,12 +218,12 @@
     
     </ul>  -->
     </li> 
-    <li class="">
+    <!-- <li class="">
     <a href="blog1.html">BLOG</a>
-    <!-- <ul class="sub-menu">
-    <li class=""> -->
+    <ul class="sub-menu">
+    <li class=""> 
     
-    </li>
+    </li> -->
     <!-- <li class="menu-item-has-children">
     <a href="javascript:void(0);">Team View Style</a>
     <ul class="sub-menu">
@@ -290,7 +290,7 @@
 </section>
 
 
-<section class="page_banner" style="background-image: url(assets/images/bg/banner.jpg);">
+<section class="page_banner" style="background-image: url(assets/images/me/unlock6.webp);">
 <div class="overlay"></div>
 <div class="container largeContainer">
 <div class="row">
@@ -306,7 +306,7 @@
 <section class="servicePage01">
 <div class="container largeContainer">
 <div class="row">
-<div class="col-lg-4 col-md-6">
+<div class="col-lg-6 col-md-6">
 <div class="service_item_06 mb90 text-center">
 <div class="ibMeta">
 <img src="assets/images/service/1.png" alt>
@@ -334,7 +334,7 @@
 </p>
 </div>
 </div>
-<div class="col-lg-4 col-md-6">
+<!-- <div class="col-lg-4 col-md-6">
 <div class="service_item_06 mb90 text-center">
 <div class="ibMeta">
 <img src="assets/images/service/2.png" alt>
@@ -361,8 +361,8 @@
 
 </p>
 </div>
-</div>
-<div  class="col-lg-4 col-md-6">
+</div> -->
+<div  class="col-lg-6 col-md-6">
 <div class="service_item_06 mb90 text-center">
 <div class="ibMeta">
 <img src="assets/images/service/3.png" alt>
@@ -544,7 +544,6 @@
 </div>
 </section>
 
-
 <footer class="footer_01">
     <div class="container largeContainer">
     <div class="row">
@@ -554,32 +553,32 @@
     <p>At Quiver Trust, we are dedicated to empowering individuals, families, and businesses to achieve their financial goals with ease and confidence. We understand that managing finances can be a complex and sometimes overwhelming task, but with our expertise and personalized services, we aim to make financial success accessible to everyone.
     </p>
     <div class="abIcon"><i class="twi-map-marker"></i>9b ibironke crescent, Off Okunola Aina street, OASIC Estate, Maryland, Lagos.</div>
-    <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735">o.alao@quivertrustltd.com.ng</a></div>
+    <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
     <div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
     </div>
     </div>
-    <div class="col-md-6 col-xl-3 ml54">
+    <div class="col-md-6 col-xl-4 ml54">
     <div class="widget">
     <div class="wsubtitle">Clean & Flexible</div>
     <h3 class="widget_title">Latest Post</h3>
     <div class="pp_post_item">
-    <img src="assets/images/blog/b1.jpg" alt>
+    <img src="assets/images/me/specialdiscount.png" alt>
     <span>July 29, 2025</span>
     <a href="single-blog.html">Get 5% Discount</a>
     </div>
     <div class="pp_post_item">
-    <img src="assets/images/blog/b2.jpg" alt>
+    <img src="assets/images/me/onemonth.webp" alt>
     <span>April 29, 2025</span>
     <a href="single-blog.html">minimum of One month investment</a>
     </div>
     <div class="pp_post_item">
-    <img src="assets/images/blog/b3.jpg" alt>
+    <img src="assets/images/me/bconsult.webp" alt>
     <span>March 29, 2025</span>
     <a href="single-blog.html">Business Consulting</a>
     </div>
     </div>
     </div>
-    <div class="col-md-6 col-xl-2">
+    <div class="col-md-6 col-xl-4">
     <div class="widget">
     <div class="wsubtitle">Clean & Flexible</div>
     <h3 class="widget_title">Quick Links</h3>
@@ -588,11 +587,11 @@
     <li><a href="javascript:void(0);">ABOUT</a></li>
     <li><a href="javascript:void(0);">SERVICES</a></li>
     <li><a href="javascript:void(0);">FAQs</a></li>
-    <li><a href="javascript:void(0);">BLOG</a></li>
+    <!-- <li><a href="javascript:void(0);">BLOG</a></li> -->
     </ul>
     </div>
     </div>
-    <div class="col-md-6 col-xl-3">
+    <!-- <div class="col-md-6 col-xl-4">
     <div class="widget gallery">
     <div class="wsubtitle">Clean & Flexible</div>
     <h3 class="widget_title">Images of happy client</h3>
@@ -608,8 +607,8 @@
     <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/9.jpg" alt="Instagram"></a>
     </div>
     </div>
-    </div>
-    </div>
+    </div> -->
+    </div> 
     <div class="row">
     <div class="col-lg-12">
     <div class="ctaMail">
@@ -632,7 +631,7 @@
     </div>
     <div class="row">
     <div class="col-lg-12 text-center">
-    <!-- <div class="Copyright"><span>Bepro</span> - Copyright 2021. Developed by <a href="https://themewar.com/">Themewar</a></div> -->
+    <div class="Copyright"><span>quivertrustltd</span> - Copyright 2021. Developed by <a href="#">Ogungbuyi victor</a></div>
     </div>
     </div>
     </div>
