--- a/about1.html
+++ b/about1.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from themewar.com/html/bepro/about1.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Oct 2024 13:06:36 GMT -->
 <head>
-<title>Quiver Trust limited - A Microfinance company</title>
+<title>Quiver Trust Limited - A Microfinance company</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 
@@ -33,14 +33,14 @@
 
 <div class="preloader clock text-center">
 <div class="queraLoader">
-<div class="loaderO">
-<!-- <span>Q</span>
-<span>U</span>
-<span>I</span>
-<span>V</span>
-<span>E</span>
-<span>R</span> -->
-</div>
+    <div class="loaderO">
+        <span style="font-family:'Courier New', Courier, monospace">Q</span>
+        <span style="font-family:'Courier New', Courier, monospace">U</span>
+        <span style="font-family:'Courier New', Courier, monospace">I</span>
+        <span style="font-family:'Courier New', Courier, monospace">V</span>
+        <span style="font-family:'Courier New', Courier, monospace">E</span>
+        <span style="font-family:'Courier New', Courier, monospace">R</span>
+        </div>
 </div>
 </div>
 
@@ -70,7 +70,7 @@
         <div class="col-lg-12">
         <div class="navbar01">
         <div class="logo">
-        <a href="index.html"><img src="assets/images/logo.png" alt="berpo"></a>
+        <a href="index.html"><img src="assets/images/me/QTLOGO.png" alt="berpo"></a>
         </div>
         <a href="javascript:void(0)" class="menu_btn"><i class="twi-bars2"></i></a>
         <nav class="mainMenu">
@@ -306,20 +306,37 @@
 <div class="container largeContainer">
 <div class="row">
 <div class="col-lg-5">
-<div class="subTitle">Who We Are</div>
-<h2 class="secTitle"> A Microfinance Solutions
+<div class="subTitle">Quiver Trust Limited</div>
+<h2 class="secTitle"> A Microfinance Company
 </h2>
 <p>
-    Welcome to Quiver trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions. Our mission is to provide accessible, reliable, and tailored financial services to individuals, families, and businesses, enabling them to achieve their goals and create a better future.
+    At Quiver Trust Limited, we are dedicated to partnering with you to meet your diverse financial needs. With our extensive experience in banking, we possess the expertise and resources to help you achieve your financial goals. 
+Our commitment to excellence, integrity, responsibility, accountability, and customer-focused service aligns with our vision of being a trusted partner, delivering exceptional financial solutions.
+Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), the backbone of every thriving economy. We aim to contribute meaningfully to economic growth and development by supporting this vital sector.
+
+
 </p>
-<h3>What We Offer</h3>
+<h3>
+    Contacts:
+</h3>
 <ul class="listItem">
-<li><i class="twi-check-circle"></i>Micro Loans: Accessible credit solutions to support small businesses, personal needs, and unexpected expenses.</li>
-<li><i class="twi-check-circle"></i>Savings Plans: Secure and rewarding savings options to help individuals and families build a financially secure future.</li>
-<li><i class="twi-check-circle"></i>Financial Literacy Programs: Education and resources to enhance financial knowledge and promote smarter financial decisions.</li>
-<li><i class="twi-check-circle"></i>Business Advisory Services: Expert guidance and mentorship to help small businesses grow and thrive.</li>
+<li><i class="twi-check-circle"></i>
+    Phone: <br>
+    Office:- +2347025251599<br>
+    Mobile: +2348060875751
+    
+</li>
+<li><i class="twi-check-circle"></i>
+    Email:<br>
+    o.alao@quivertrustltd.com.ng
+</li>
+<li><i class="twi-check-circle"></i>
+    Address:<br>
+    9b Ibironke Crescent, Off Okunola Aina Street, OASIC Estate, Maryland, Lagos.
+    </li>
+<!-- <li><i class="twi-check-circle"></i>Business Advisory Services: Expert guidance and mentorship to help small businesses grow and thrive.</li> -->
 </ul>
-<a class="berpo_btn with_icon04" href="service1.html"><span class="bp-shape"></span><span class="bp-shape"></span><span class="bp-shape"></span><span class="bp-shape"></span><span class="bp-text">Read More<i class="twi-arrow-right"></i></span></a>
+<a class="berpo_btn with_icon04" href="contact.html"><span class="bp-shape"></span><span class="bp-shape"></span><span class="bp-shape"></span><span class="bp-shape"></span><span class="bp-text">Contact<i class="twi-arrow-right"></i></span></a>
 </div>
 <div class="col-lg-7">
 <div class="abpageThumb">
@@ -343,7 +360,7 @@
 </div>
 </div>
 <div class="row">
-<div class="col-lg-4 col-md-6">
+<div class="col-lg-6 col-md-6">
 <div class="service_item_10">
 <div class="ibMeta">
 <img src="assets/images/service/4.png" alt>
@@ -353,7 +370,7 @@
 
 </div>
 </div>
-<div class="col-lg-4 col-md-6">
+<!-- <div class="col-lg-4 col-md-6">
 <div class="service_item_10">
 <div class="ibMeta">
 <img src="assets/images/service/5.png" alt>
@@ -362,13 +379,13 @@
 <p>At Quiver trust, we believe that investing is one of the most effective ways to secure your financial future, grow your wealth, and achieve your long-term goals. Our investment options are designed to cater to individuals and businesses looking for opportunities to maximize their returns while managing risk effectively.</p>
 
 </div>
-</div>
-<div class="col-lg-4 col-md-6">
+</div> -->
+<div class="col-lg-6 col-md-6">
 <div class="service_item_10">
 <div class="ibMeta">
 <img src="assets/images/service/6.png" alt>
 </div>
-<h3><a href="single-service.html">Expert in  business business partner</a></h3>
+<h3><a href="single-service.html">Business Advisory</a></h3>
 <p>At Quiver trust, we understand that navigating the complexities of today’s business environment requires expert guidance and innovative solutions. Our business consulting services are designed to help organizations of all sizes overcome challenges, optimize operations, and achieve sustainable growth.</p>
 
 </div>
@@ -405,8 +422,8 @@
 <div class="container largeContainer">
 <div class="row">
 <div class="col-lg-12 text-center">
-<div class="subTitle">Our Memebers</div>
-<h2 class="secTitle">Meet Our Latest <br>Team Member</h2>
+<!-- <div class="subTitle">Our Memebers</div> -->
+<h2 class="secTitle">Our team</h2>
 </div>
 </div>
 <div class="row">
@@ -533,20 +550,18 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 </div>
 </footer> -->
 
+
 <footer class="footer_01">
     <div class="container largeContainer">
     <div class="row">
     <div class="col-md-6 col-xl-4">
     <div class="aboutWidget">
-    <a href="index.html"><img src="assets/images/logo.png" alt></a>
-    <p>At Quiver Trust, we are dedicated to empowering individuals, families, and businesses to achieve their financial goals with ease and confidence. We understand that managing finances can be a complex and sometimes overwhelming task, but with our expertise and personalized services, we aim to make financial success accessible to everyone.
+    <a href="index.html"><img src="assets/images/QTLOGO123.png" alt></a>
+    <p>Welcome to Quiver trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
     </p>
-    <div class="abIcon"><i class="twi-map-marker"></i>9b ibironke crescent, Off Okunola Aina street, OASIC Estate, Maryland, Lagos.</div>
-    <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
-    <div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
     </div>
     </div>
-    <div class="col-md-6 col-xl-4 ml54">
+    <!-- <div class="col-md-6 col-xl-3 ml54">
     <div class="widget">
     <div class="wsubtitle">Clean & Flexible</div>
     <h3 class="widget_title">Latest Post</h3>
@@ -566,37 +581,30 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <a href="single-blog.html">Business Consulting</a>
     </div>
     </div>
-    </div>
+    </div> -->
     <div class="col-md-6 col-xl-4">
     <div class="widget">
-    <div class="wsubtitle">Clean & Flexible</div>
+    <!-- <div class="wsubtitle">Clean & Flexible</div> -->
     <h3 class="widget_title">Quick Links</h3>
     <ul class="menu">
-    <li><a href="javascript:void(0);">HOME</a></li>
-    <li><a href="javascript:void(0);">ABOUT</a></li>
-    <li><a href="javascript:void(0);">SERVICES</a></li>
-    <li><a href="javascript:void(0);">FAQs</a></li>
+    <li><a href="index.html">HOME</a></li>
+    <li><a href="about1.html">ABOUT</a></li>
+    <li><a href="service1.html">SERVICES</a></li>
+    <li><a href="FAQs.html">FAQs</a></li>
     <!-- <li><a href="javascript:void(0);">BLOG</a></li> -->
     </ul>
     </div>
     </div>
-    <!-- <div class="col-md-6 col-xl-4">
+    <div class="col-md-6 col-xl-4">
     <div class="widget gallery">
-    <div class="wsubtitle">Clean & Flexible</div>
-    <h3 class="widget_title">Images of happy client</h3>
-    <div class="galleryShots">
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/1.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/2.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/3.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/4.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/5.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/6.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/7.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/8.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/9.jpg" alt="Instagram"></a>
+    <!-- <div class="wsubtitle">Contact us</div> -->
+    <h3 class="widget_title">Contact us</h3>
+    <div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent, Off Okunola Aina Street, OASIC Estate, Maryland, Lagos.</div>
+    <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
+    <div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
+    
     </div>
     </div>
-    </div> -->
     </div> 
     <div class="row">
     <div class="col-lg-12">
@@ -620,7 +628,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     </div>
     <div class="row">
     <div class="col-lg-12 text-center">
-    <div class="Copyright"><span>quivertrustltd</span> - Copyright 2021. Developed by <a href="#">Ogungbuyi victor</a></div>
+    <div class="Copyright"><span>quivertrustltd</span> - Copyright 2025. Developed by <a href="#">Ogungbuyi victor</a></div>
     </div>
     </div>
     </div>
@@ -662,3 +670,27 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 <!-- Mirrored from themewar.com/html/bepro/about1.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Oct 2024 13:06:41 GMT -->
 </html>
+
+<!-- 
+Name: Quiver Trust Limited
+About the Company: A Microfinance *Company*
+At Quiver Trust Limited, we are dedicated to partnering with you to meet your diverse financial needs. With our extensive experience in banking, we possess the expertise and resources to help you achieve your financial goals. 
+Our commitment to excellence, integrity, responsibility, accountability, and customer-focused service aligns with our vision of being a trusted partner, delivering exceptional financial solutions.
+Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), the backbone of every thriving economy. We aim to contribute meaningfully to economic growth and development by supporting this vital sector.
+
+Services:
+Loans  
+Business Advisory
+
+Contacts:
+Phone: 
+Office:- +2347025251599
+Mobile: +2348060875751
+
+Email:
+o.alao@quivertrustltd.com.ng
+
+Address:
+9b Ibironke Crescent, Off Okunola Aina Street, OASIC Estate, Maryland, Lagos
+
+-->
