--- a/FAQs.html
+++ b/FAQs.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from themewar.com/html/bepro/about1.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Oct 2024 13:06:36 GMT -->
 <head>
-<title>Quiver Trust limited - A Microfinance company</title>
+<title>Quiver Trust Limited - A Microfinance company</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 
@@ -33,14 +33,14 @@
 
 <div class="preloader clock text-center">
 <div class="queraLoader">
-<div class="loaderO">
-<!-- <span>Q</span>
-<span>U</span>
-<span>I</span>
-<span>V</span>
-<span>E</span>
-<span>R</span> -->
-</div>
+    <div class="loaderO">
+        <span style="font-family:'Courier New', Courier, monospace">Q</span>
+        <span style="font-family:'Courier New', Courier, monospace">U</span>
+        <span style="font-family:'Courier New', Courier, monospace">I</span>
+        <span style="font-family:'Courier New', Courier, monospace">V</span>
+        <span style="font-family:'Courier New', Courier, monospace">E</span>
+        <span style="font-family:'Courier New', Courier, monospace">R</span>
+    </div>
 </div>
 </div>
 
@@ -70,7 +70,7 @@
         <div class="col-lg-12">
         <div class="navbar01">
         <div class="logo">
-        <a href="index.html"><img src="assets/images/logo.png" alt="berpo"></a>
+        <a href="index.html"><img src="assets/images/me/QTLOGO.png" alt="berpo"></a>
         </div>
         <a href="javascript:void(0)" class="menu_btn"><i class="twi-bars2"></i></a>
         <nav class="mainMenu">
@@ -555,20 +555,18 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 </div>
 </footer> -->
 
+
 <footer class="footer_01">
     <div class="container largeContainer">
     <div class="row">
     <div class="col-md-6 col-xl-4">
     <div class="aboutWidget">
-    <a href="index.html"><img src="assets/images/logo.png" alt></a>
-    <p>At Quiver Trust, we are dedicated to empowering individuals, families, and businesses to achieve their financial goals with ease and confidence. We understand that managing finances can be a complex and sometimes overwhelming task, but with our expertise and personalized services, we aim to make financial success accessible to everyone.
+    <a href="index.html"><img src="assets/images/QTLOGO123.png" alt></a>
+    <p>Welcome to Quiver trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
     </p>
-    <div class="abIcon"><i class="twi-map-marker"></i>9b ibironke crescent, Off Okunola Aina street, OASIC Estate, Maryland, Lagos.</div>
-    <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
-    <div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
     </div>
     </div>
-    <div class="col-md-6 col-xl-4 ml54">
+    <!-- <div class="col-md-6 col-xl-3 ml54">
     <div class="widget">
     <div class="wsubtitle">Clean & Flexible</div>
     <h3 class="widget_title">Latest Post</h3>
@@ -588,37 +586,30 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <a href="single-blog.html">Business Consulting</a>
     </div>
     </div>
-    </div>
+    </div> -->
     <div class="col-md-6 col-xl-4">
     <div class="widget">
-    <div class="wsubtitle">Clean & Flexible</div>
+    <!-- <div class="wsubtitle">Clean & Flexible</div> -->
     <h3 class="widget_title">Quick Links</h3>
     <ul class="menu">
-    <li><a href="javascript:void(0);">HOME</a></li>
-    <li><a href="javascript:void(0);">ABOUT</a></li>
-    <li><a href="javascript:void(0);">SERVICES</a></li>
-    <li><a href="javascript:void(0);">FAQs</a></li>
+    <li><a href="index.html">HOME</a></li>
+    <li><a href="about1.html">ABOUT</a></li>
+    <li><a href="service1.html">SERVICES</a></li>
+    <li><a href="FAQs.html">FAQs</a></li>
     <!-- <li><a href="javascript:void(0);">BLOG</a></li> -->
     </ul>
     </div>
     </div>
-    <!-- <div class="col-md-6 col-xl-4">
+    <div class="col-md-6 col-xl-4">
     <div class="widget gallery">
-    <div class="wsubtitle">Clean & Flexible</div>
-    <h3 class="widget_title">Images of happy client</h3>
-    <div class="galleryShots">
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/1.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/2.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/3.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/4.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/5.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/6.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/7.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/8.jpg" alt="Instagram"></a>
-    <a target="_blank" href="https://www.instagram.com/"><img src="assets/images/instagram/9.jpg" alt="Instagram"></a>
+    <!-- <div class="wsubtitle">Contact us</div> -->
+    <h3 class="widget_title">Contact us</h3>
+    <div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent, Off Okunola Aina Street, OASIC Estate, Maryland, Lagos.</div>
+    <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
+    <div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
+    
     </div>
     </div>
-    </div> -->
     </div> 
     <div class="row">
     <div class="col-lg-12">
@@ -642,11 +633,11 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     </div>
     <div class="row">
     <div class="col-lg-12 text-center">
-    <div class="Copyright"><span>quivertrustltd</span> - Copyright 2021. Developed by <a href="#">Ogungbuyi victor</a></div>
+    <div class="Copyright"><span>quivertrustltd</span> - Copyright 2025. Developed by <a href="#">Ogungbuyi victor</a></div>
     </div>
     </div>
     </div>
-    </footer>
+</footer>
 
 <a href="javascript:void(0);" id="backtotop"><i class="twi-arrow-to-top1"></i></a>
 
